--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     background-color: cornflowerblue;
     width: 100%;
     height: 97%;
+    transition: 2.5s;
   }
 
   .lift {
@@ -12,6 +13,7 @@
     border: 2px solid black;
     display: flex;
     margin: 4px;
+    justify-content: space-between;
   }
   .floor-container {
     top: 0px;
